// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelInputDisabled Disabled LabelInput should not allow to fill text 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.813rem;
  width: 16.625rem;
}

.emotion-1 {
  border-radius: 0.25rem;
  border: 0.063rem solid #EBEEF0;
  background-color: #EBEEF0;
  color: #888596;
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0rem 0.75rem;
}

.emotion-1:hover:not([disabled]) {
  border: #EBEEF0;
  box-shadow: 0rem 0rem 0.313rem #F1F1F1;
  color: #A4AAC0;
}

.emotion-1:focus-within {
  border: 0.063rem solid #00DBC7;
  box-shadow: 0rem 0rem 0.875rem #F1F1F1;
  color: #676478;
}

.emotion-2 {
  outline: none;
  border: 0;
  background-color: inherit;
  color: inherit;
  width: 100%;
  font-size: 0.813rem;
  min-height: 2rem;
  cursor: inherit;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelInput"
  >
    <div
      class="emotion-1"
      data-testid="inputWrapper"
      disabled=""
    >
      <input
        class="emotion-2"
        data-testid="input"
        disabled=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`LabelInputDisabled Disabled LabelInput with value in props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.813rem;
  width: 16.625rem;
}

.emotion-1 {
  margin-bottom: 0.25rem;
  font-weight: 600;
  color: #120D2E;
}

.emotion-2 {
  border-radius: 0.25rem;
  border: 0.063rem solid #EBEEF0;
  background-color: #EBEEF0;
  color: #888596;
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0rem 0.75rem;
}

.emotion-2:hover:not([disabled]) {
  border: #EBEEF0;
  box-shadow: 0rem 0rem 0.313rem #F1F1F1;
  color: #A4AAC0;
}

.emotion-2:focus-within {
  border: 0.063rem solid #00DBC7;
  box-shadow: 0rem 0rem 0.875rem #F1F1F1;
  color: #676478;
}

.emotion-3 {
  outline: none;
  border: 0;
  background-color: inherit;
  color: inherit;
  width: 100%;
  font-size: 0.813rem;
  min-height: 2rem;
  cursor: inherit;
}

<div>
  <div
    class="emotion-0"
    data-testid="LabelInput"
  >
    <label
      class="emotion-1"
      data-testid="label"
    >
      disabledInput
    </label>
    <div
      class="emotion-2"
      data-testid="inputWrapper"
      disabled=""
    >
      <input
        class="emotion-3"
        data-testid="input"
        disabled=""
        type="text"
        value="disabledInputValue"
      />
    </div>
  </div>
</div>
`;
